fix: change overflow to y only
Closes #39

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -10,7 +10,7 @@ body {
     font-family: 'Alegreya Sans SC', sans-serif;
     font-size: 16px;
     cursor: url(../cursor.cur);
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 .modal-content {
